[package]
name = "rathole"
version = "0.5.0"
edition = "2021"
authors = ["Yujia Qiao <code@rapiz.me>", "Alireza Samavarchi"]
description = "A reverse proxy for NAT traversal with QUIC support"
license = "Apache-2.0"
repository = "https://github.com/alirezasamavarchi/rathole"
readme = "README.md"
build = "build.rs"
include = ["src/**/*", "LICENSE", "README.md", "build.rs"]

[features]
default = ["server", "client", "noise", "hot-reload", "quic", "rustls"]
server = []
client = []
noise = ["snowstorm", "base64"]
quic = ["quinn", "rustls"]
rustls = ["tokio-rustls", "rustls-pemfile", "rustls-native-certs", "p12"]
websocket-rustls = ["tokio-tungstenite", "tokio-util", "futures-core", "futures-sink", "rustls"]
hot-reload = ["notify"]
console = ["console-subscriber", "tokio/tracing"]
embedded = ["server", "client", "hot-reload", "noise"]

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
bytes = { version = "1.7.1", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
toml = { version = "0.8.14" }
serde = { version = "1.0.204", features = ["derive"] }
anyhow = { version = "1.0.86" }
sha2 = { version = "0.10.8" }
bincode = { version = "1.3.3" }
lazy_static = { version = "1.5.0" }
hex = { version = "0.4.3" }
rand = { version = "0.8.5" }
backoff = { version = "0.4.0", features = ["tokio"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
socket2 = { version = "0.5.7", features = ["all"] }
fdlimit = { version = "0.3.0" }
async-trait = { version = "0.1.81" }
snowstorm = { version = "0.4.0", optional = true, features = ["stream"], default-features = false }
base64 = { version = "0.22.1", optional = true }
notify = { version = "6.1.1", optional = true }
console-subscriber = { version = "0.2.0", optional = true, features = ["parking_lot"] }
atty = { version = "0.2.14" }
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"] }
async-socks5 = { version = "0.5.1" }
url = { version = "2.5.2", features = ["serde"] }
tokio-tungstenite = { version = "0.23.1", optional = true }
tokio-util = { version = "0.7.11", optional = true, features = ["io"] }
futures-core = { version = "0.3.30", optional = true }
futures-sink = { version = "0.3.30", optional = true }
tokio-rustls = { version = "0.26.0", optional = true }
rustls = { version = "0.24.1", default-features = false, features = ["std", "quic"], optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
rustls-native-certs = { version = "0.8.0", optional = true }
p12 = { version = "0.6.3", optional = true }
quinn = { version = "0.12.0", optional = true }
futures-util = { version = "0.3.30", optional = true }
futures = { version = "0.3.30", optional = true }

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10.66", features = ["vendored"], optional = true }

[build-dependencies]
vergen = { version = "8.3.1", default-features = false, features = ["build", "git", "cargo"] }
anyhow = { version = "1.0.86" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[profile.bench]
debug = 1

[profile.minimal]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
